# CS311.Q11-Final-Project

./: .gitignore  README.md  docker-compose.yml  ingest_data.py  pyproject.toml  requirements.txt  run_app.py  uv.toml
data_preperation/: README.md  load_data.py  processing.py
evaluation/: README_new.md  eval_basic.py  eval_llm_vs_rag.py  eval_ragas.py  eval_retrieval.py  eval_retrieval_2.py  generation_evaluation.py  hallucination_evaluation.py  run_all.py  test_questions.json  traffic_law_eval_dataset.json
src/app/: __init__.py  config.py  main.py
src/app/core/: __init__.py  generation.py  rerank.py  retrieval.py
src/app/db/: __init__.py  es_conn.py  qdrant_conn.py
src/app/models/: __init__.py  schemas.py
src/app/prompts/: __init__.py  templates.py
src/data_storage/: __init__.py  elasticsearch_service.py  qdrant_service.py
src/models/: __init__.py  embedding.py  llm.py  reranker.py
src/services/: __init__.py  generator.py  rag.py  retrieval.py
src/utils/: __init__.py  logger.py
ui/: app.py
